# analitiq

./: .gitignore  .yamllint  404.html  CNAME  DSPy Optimize.ipynb  LICENSE  README.md  TODO.md  actual_response.csv  basic_optimized  index.html  mkdocs.yml  mypy.ini  noxfile.py  poetry.lock.backup  pylintrc  pyproject.toml  session_uuid.txt  sitemap.xml  test_schema.yml
.github/workflows/: ci.yml  test-pipeline.yml
agents/doc_search/: index.html
agents/sql/: index.html
backup/: requirements.txt  weaviate_backup.py
cookbooks/load_documents/: index.html
docker/: Dockerfile  Makefile  docker-compose.yml  requirements.txt
docs/: index.md
docs/agents/: doc_search.md  sql.md
docs/cookbooks/: load_documents.md
docs/framework/vector_databases/: weaviate.md
docs/getting_started/: profiles.md  project.md  quick_start.md
docs/getting_started/cloud/: analitiq_add_data_warehouse.md  analitiq_add_documents.md  analitiq_add_to_slack.md  analitiq_slack_commands.md  registration.md
docs/getting_started/hosted/: project.md  quick_start.md
docs/services/: doc_search.md  sql.md
docs/source/: api.rst  conf.py  index.rst  quickstart.rst  ui.rst  usage.rst
docs/vector_databases/: weaviate.md
framework/vector_databases/weaviate/: index.html
getting_started/cloud/analitiq_add_data_warehouse/: index.html
getting_started/cloud/analitiq_add_documents/: index.html
getting_started/cloud/analitiq_add_to_slack/: index.html
getting_started/cloud/analitiq_slack_commands/: index.html
getting_started/cloud/registration/: index.html
getting_started/hosted/profiles/: index.html
getting_started/hosted/project/: index.html
getting_started/hosted/quick_start/: index.html
getting_started/profiles/: index.html
getting_started/project/: index.html
getting_started/quick_start/: index.html
libs/: Looping through examples.py  example.py  example_loading_files.py  example_vectordb.py  profiles.sample.yml  profiles.yml  project.sample.yml  project.yml  project_tree.py  requirements.txt  task_op.py  test.py  testing_prompt_acccuracy.py
libs/analitiq/: analitiq.py  core_config.yml  logger.py  main.py  main_backup.py  prompt.py  requirements.txt  requirements_aws.txt  requirements_cloud.txt
libs/analitiq/agents/: README.md  agent_pipeline.py  base_agent.py
libs/analitiq/agents/analyze/: analyse.py  prompt.py
libs/analitiq/agents/save/: README.md  prompt.py  save.py
libs/analitiq/agents/search_vdb/: search_vdb.py  vdb_agent.py
libs/analitiq/agents/sql/: README.md  prompt.py  schema.py  sql-llm-improved.py  sql.py  sql_agent.py
libs/analitiq/base/: BaseDb.py  BaseMemory.py  BaseResponse.py  BaseService.py  BaseSession.py  Database.py  GlobalConfig.py  Graph.py  ProfileLoader.py  ServicesLoader.py  agent_context.py  base_chunker.py  base_llm.py  base_loader.py  base_relational_database.py  base_vector_database.py
libs/analitiq/base/llm/: BaseLlm.py  prompt.py
libs/analitiq/chunkers/: json_chunker.py  python_chunker.py  sql_chunker.py  text_chunker.py
libs/analitiq/databases/: README.md
libs/analitiq/databases/vector/: README.md  schema.py
libs/analitiq/factories/: chunker_factory.py  llm_factory.py  loader_factory.py  relational_database_factory.py  vector_database_factory.py
libs/analitiq/llm/: BaseLlm.py  prompt.py
libs/analitiq/llms/: prompts.py  schemas.py  utils.py
libs/analitiq/llms/bedrock/: bedrock_connector.py
libs/analitiq/llms/mistral/: openai_connector.py
libs/analitiq/llms/openai/: openai_connector.py
libs/analitiq/loaders/documents/: directory_loader.py  file_loader.py  schemas.py  text_loader.py
libs/analitiq/logger/: logger.py  logger_config.yml
libs/analitiq/relational_databases/: README.md
libs/analitiq/relational_databases/postgres/: postgres_rdb.py
libs/analitiq/relational_databases/redshift/: redshift_rdb.py
libs/analitiq/schemas/: vector_store.py
libs/analitiq/services/: README.md
libs/analitiq/services/analyze/: README.md  analyse.py  prompt.py
libs/analitiq/services/datamanager/: dataManager.py
libs/analitiq/services/generalknowledger/: Get_Knowledge.py
libs/analitiq/services/save/: README.md  save.py
libs/analitiq/utils/: code_extractor.py  custom_directory_loader.py  custom_recursive_json_splitter.py  db_utils.py  document_processor.py  general.py  keyword_extractions.py  sql_recursive_text_splitter.py  sql_segmenter.py  string_loader.py  task_mgmt.py  tree.py  yaml_data_splitter.py  yaml_loader.py
libs/analitiq/vectordb/: README.md  analitiq_vectorizer.py  base_handler.py  chromadb.py  huggingface_vectorizer.py  keyword_extractions.py  schema.py  vectorizer.py  weaviate.py  weaviate_handler.py
libs/cli/: cli_runner.py  setup.py
libs/cookbooks/: Looping through examples.py  example_analitiq.py  example_docs_agent.py  example_docs_agent_batch.py  example_docs_agent_stream.py  example_query_sql.py  example_sql.py  example_sql_agent.py  example_sql_agent_batch.py  example_sql_agent_stream.py  load_files_into_vector_database.py  query_services.py
libs/cookbooks/utils/: example_custom_directory_loader.py  example_table_comparison.py
libs/cookbooks/vector_databases/: example_docs_agent.py  example_load_docs.py  example_load_docs2.py  example_search_docs.py  example_text_processing.py
libs/custom_agents/chart/: example_chart.py
libs/custom_services/chart/: example_chart.py
libs/tests/: README.MD  README.md  public.sql  schema1.sql  schema2.sql  test_sql_agent.py
libs/tests/base/: test_ProfileLoader.py  test_database.py
libs/tests/configs/: Readme.md  profiles.sample.yml  project.sample.yml
libs/tests/e2e/: conftest.py  helpers.py  test_agent_docs.py  test_agent_sql.py  test_analitiq.py  test_example_analitiq.py  test_example_docs_agent.py  test_example_sql_agent.py
libs/tests/helpers/: helpers.py
libs/tests/utils/: task_mgmt.py
libs/tests/vectordb/: test_file.txt  test_keyword_extractions.py  test_vectorizer.py  test_weaviate.py  test_weaviate_handler.py  weaviate_handler.py
search/: search_index.json
services/doc_search/: index.html
services/sql/: index.html
(+95 files in other folders)
