[tool.poetry]
name = "analitiq"
version = "0.1.0"
homepage = "https://analitiq.ai"
repository = "https://github.com/analitiq-ai/analitiq"
documentation = "https://analitiq-ai.github.io/analitiq/"
description = "A framework for managing your data using LLMs."
authors = ["Kirill Andriychuk <kirill@analitiq.ai>"]
license = "MIT"
keywords = ["analitiq", "llms", "data management", "nl2sql"]
classifiers= [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Natural Language :: English',
        'Programming Language :: Python :: 3.9'
    ]
packages = [{include= "datastorm"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^1.11"
pytest-cov = "^2.8"
flake8 = "^3.7"
pre-commit = "^1.20"
mypy = "^0.740.0"
bump2version = "^0.5.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
