[tool.poetry]
name = "analitiq"
version = "0.1.0"
homepage = "https://analitiq.ai"
repository = "https://github.com/analitiq-ai/analitiq"
documentation = "https://analitiq-ai.github.io/analitiq/"
description = "A framework for managing your data using LLMs."
authors = ["Kirill Andriychuk <kirill@analitiq.ai>"]
license = "MIT"
keywords = ["analitiq", "llms", "data management", "nl2sql"]
readme = "README.md"
classifiers= [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Natural Language :: English',
        'Programming Language :: Python :: 3.9'
    ]
packages = [
        {include = "analitiq", from = "./libs" }
]


[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.34.113"
langchain = "0.2.1"
langchain-aws = "0.1.6"
langchain-community = "0.2.1"
langchain-core = "0.2.1"
langchain-mistralai = "0.1.7"
langchain-openai = "0.1.7"
langchain-text-splitters = "0.2.0"
pandas = "1.4.2"
pyyaml = "6.0.1"
sqlalchemy = "1.4.52"
sqlalchemy-redshift = "0.8.14"
typing-inspect = "0.9.0"
typing-extensions = "4.8.0"
pydantic = "2.5.1"
weaviate-client = "4.5.6"
redshift-connector = "2.1.1"
tabulate = "0.9.0"
psycopg2-binary = "2.9.9"
json-log-formatter = "^1.0"
coverage = "^7.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pytest-mock = "^1.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.5.26"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
        ".", "libs",
]
